change mk to mpk

--- a/translations/admin.en.yaml
+++ b/translations/admin.en.yaml
@@ -1,3 +1,3 @@
-cleanup_main_label: GO4Dashboard
+cleanup_main_label: Cleanup Bundle
 cleanup_project_doc_label: Project Documentation
 cleanup_pimcore_doc_label: Pimcore Documentation
